# beatrice-trainer

./: .gitignore  README.md  beatrice_trainer_colab.ipynb  pyproject.toml
assets/pretrained/: 104_3_checkpoint_00300000.pt  122_checkpoint_03000000.pt
beatrice_trainer/: __main__.py
datasets/: model_1_config_lowmem.json
